tg-4922 [P2] Se pueden seleccionar años negativos en componentes de fecha

--- a/front-end/apps/projects/hospital/src/app/modules/core/dialogs/medical-coverage/medical-coverage.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/core/dialogs/medical-coverage/medical-coverage.component.html
@@ -105,7 +105,7 @@
 					</mat-form-field>
 					<mat-form-field appearance="outline">
 						<mat-label>Fecha de inicio</mat-label>
-						<input formControlName="startDate" id="start-date" matInput [matDatepicker]="picker2">
+						<input formControlName="startDate" id="start-date" matInput [matDatepicker]="picker2" [min]="minDate">
 						<mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
 						<mat-datepicker #picker2></mat-datepicker>
 					</mat-form-field>
