--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/effective-time-dialog/effective-time-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/effective-time-dialog/effective-time-dialog.component.html
@@ -10,7 +10,7 @@
 			<mat-form-field appearance="outline">
 				<mat-label>Fecha</mat-label>
 				<input matInput id="date" [matDatepicker]="myDatepicker" formControlName="date"
-					[max]="today">
+					[min]="minDate" [max]="today">
 				<mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
 				<mat-datepicker #myDatepicker>
 				</mat-datepicker>
