--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/search/search.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/search/search.component.html
@@ -115,6 +115,7 @@
 						<input matInput id="birthDate"
 							   formControlName="birthDate"
 							   [matDatepicker]="picker"
+							   [min]="minDate"
 							   [max]="today">
 						<mat-error *ngIf="formSearchSubmitted && hasError(formSearch, 'required', 'birthDate')">
 							<span [translate]="'pacientes.form.REQUIRED'"></span>
