--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/add-inmunization/add-inmunization.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/add-inmunization/add-inmunization.component.html
@@ -39,7 +39,7 @@
 					<mat-label [translate]="'internaciones.internacion-paciente.vacunas-summary.REGISTRY_DATE'">
 					</mat-label>
 					<input matInput id="date" [matDatepicker]="myDatepicker" formControlName="date"
-						   [max]="this.today">
+						   [min]="minDate" [max]="this.today">
 					<mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
 					<mat-datepicker #myDatepicker startView="multi-year" (yearSelected)="chosenYearHandler($event)"
 									(monthSelected)="chosenMonthHandler($event)">
