--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/probable-discharge-dialog/probable-discharge-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/probable-discharge-dialog/probable-discharge-dialog.component.html
@@ -9,7 +9,7 @@
 				<mat-form-field appearance="outline">
 					<mat-label [translate]="'internaciones.internacion-paciente.card.probable_discharge_dialog.PLACEHOLDER'">
 					</mat-label>
-					<input matInput id="probableDischargeDate" [matDatepicker]="myDatepicker" formControlName="probableDischargeDate">
+					<input matInput id="probableDischargeDate" [matDatepicker]="myDatepicker" formControlName="probableDischargeDate" [min]="minDate">
 					<mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
 					<mat-datepicker #myDatepicker startView="multi-year" (yearSelected)="chosenYearHandler($event)"
 									(monthSelected)="chosenMonthHandler($event)">
