--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -87,7 +87,7 @@
 							<mat-form-field appearance="outline">
 								<mat-label> Fecha </mat-label>
 								<input matInput id="date_procedure" [matDatepicker]="datePicker"
-									formControlName="performedDate" [max]="otherProceduresService.getFechaMax()">
+									formControlName="performedDate" [min]="minDate" [max]="otherProceduresService.getFechaMax()">
 								<mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
 								<mat-datepicker #datePicker></mat-datepicker>
 							</mat-form-field>
@@ -153,6 +153,7 @@
 								<mat-label> Fecha inicio </mat-label>
 								<input matInput id="start_date" [matDatepicker]="startDatePicker"
 									formControlName="fechaInicio"
+									[min]="minDate"
 									[max]="otherDiagnosticsNewConsultationService.getFechaInicioMax()"
 									(dateChange)="otherDiagnosticsNewConsultationService.checkValidFechaFin()">
 								<mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
@@ -284,6 +285,7 @@
 								<mat-label> Fecha de registro </mat-label>
 								<input matInput id="history_date" [matDatepicker]="historyDatePicker"
 									formControlName="fecha"
+									[min]="minDate"
 									[max]="personalHistoriesNewConsultationService.getMaxDate()">
 								<mat-datepicker-toggle matSuffix [for]="historyDatePicker"></mat-datepicker-toggle>
 								<mat-datepicker #historyDatePicker></mat-datepicker>
