--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
@@ -132,9 +132,9 @@
 						</mat-form-field>
 						<ng-container *ngIf="show">
 							<mat-form-field appearance="outline">
-								<mat-label [translate]="'pacientes.form.OTHER_SELF_PERCEIVED_GENDER'"></mat-label>
 								<input matInput formControlName="otherGenderSelfDetermination"
-									maxlength="GENDER_MAX_LENGTH">
+									maxlength="GENDER_MAX_LENGTH" required
+									placeholder="{{ 'pacientes.form.OTHER_SELF_PERCEIVED_GENDER_LABEL' | translate }}">
 								<mat-error [translate]="'forms.MAX_LENGTH_ERROR'"
 									[translateParams]="{ max: GENDER_MAX_LENGTH }"></mat-error>
 							</mat-form-field>
