--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.scss
@@ -25,3 +25,19 @@ mat-form-field {
 	font-size: 13px;
 	font-weight: lighter;
 }
+
+span {
+	font-family: Roboto, "Helvetica Neue", sans-serif;
+	font-size: 14px;
+}
+
+.form_dental_pieces {
+	.mat-form-field {
+		width: 80%;
+		margin-top: 10px;
+		::ng-deep .mat-form-field-wrapper{
+			background-color: white;
+			height: 38px;
+		}
+	}
+}
