tg-5059. [MEJORA] No aparece la cruz " Descartar selección"

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
@@ -127,6 +127,10 @@
 								{{ gender.description }}
 							</mat-option>
 						</mat-select>
+						<button *ngIf="form.value.genderSelfDeterminationId" type="button" matSuffix color="warn"
+							mat-icon-button (click)="clearGenderSelfDetermination(); $event.stopPropagation();">
+							<mat-icon>close</mat-icon>
+						</button>
 					</mat-form-field>
 					<ng-container *ngIf="show">
 						<mat-form-field appearance="outline">
