tg-5018 [MEJORA] Se pueden buscar pacientes con ID con número negativo

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/component/search-patient/search-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/component/search-patient/search-patient.component.html
@@ -74,6 +74,8 @@
 					<mat-error *ngIf="hasError(formSearchById, 'required', 'id')">
 						<span translate="forms.REQUIRED"></span>
 					</mat-error>
+					<mat-error *ngIf="hasError(formSearchById, 'min', 'id')" [translate]="'forms.MIN_ERROR'"
+							   [translateParams]="{min: getError(formSearchById, 'min', 'id').min}"></mat-error>
 				</mat-form-field>
 				<div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="5px">
 					<button mat-stroked-button color="primary" type="reset" (click)="clearResults()" class="uppercase"
