tg-5063. [P1] No se visualiza "El campo es requerido"

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
@@ -138,7 +138,12 @@
 								formControlName="otherGenderSelfDetermination"
 								placeholder="{{ 'pacientes.form.OTHER_SELF_PERCEIVED_GENDER_LABEL' | translate }}">
 							<mat-error [translate]="'forms.MAX_LENGTH_ERROR'"
-								[translateParams]="{ max: GENDER_MAX_LENGTH }"></mat-error>
+								[translateParams]="{ max: GENDER_MAX_LENGTH }"
+								*ngIf="hasError(form, 'maxlength', 'otherGenderSelfDetermination')">
+							</mat-error>
+							<mat-error [translate]="'forms.REQUIRED'"
+								*ngIf="hasError(form, 'required', 'otherGenderSelfDetermination')">
+							</mat-error>
 						</mat-form-field>
 					</ng-container>
 				</div>
