tg-5068. [MEJORA] Agregar placeholder a desplegable "Identidad de genéro"

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
@@ -110,7 +110,8 @@
 				<div class="form-row">
 					<mat-form-field appearance="outline">
 						<mat-select formControlName="genderSelfDeterminationId"
-							(selectionChange)="showOtherSelfPerceivedGender()">
+							(selectionChange)="showOtherSelfPerceivedGender()"
+							placeholder="{{ 'pacientes.form.GENDER_SELF_DETERMINATION' | translate }}">
 							<mat-option [value]="null" style="color:gray;">
 								- {{ 'forms.NULL_OPTION_MESSAGE' | translate }} -
 							</mat-option>
