tg-5091 [MEJORA] Se agrega la logica para que no se habilite el link  '+ Agregar Procedimientos' en la cara de una pieza.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
@@ -58,7 +58,7 @@
 			</app-typeahead>
 		</div>
 		<span
-			[ngClass]="{'activate-button': !showActionsService?.getIsNotPreviousProcedureSet(), 'disable-button': showActionsService?.getIsNotPreviousProcedureSet() }"
+			[ngClass]="{'activate-button': (!showActionsService?.getIsNotPreviousProcedureSet() && !selectedSurfaces.length), 'disable-button': (showActionsService?.getIsNotPreviousProcedureSet() || selectedSurfaces.length)}"
 			(click)="addTypeaheadProcedure()" style="font-size: 14px;"> + Agregar otro procedimiento:</span>
 	</div>
 	<mat-dialog-actions fxLayoutAlign="end end">
