tg-5090. [FE] Cambios de CR

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
@@ -135,7 +135,7 @@
 								<mat-icon>close</mat-icon>
 							</button>
 						</mat-form-field>
-						<ng-container *ngIf="show">
+						<ng-container *ngIf="showOtherGender">
 							<mat-form-field appearance="outline">
 								<input matInput formControlName="otherGenderSelfDetermination"
 									maxlength="GENDER_MAX_LENGTH" required
