--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
@@ -124,7 +124,7 @@
 							<mat-icon>close</mat-icon>
 						</button>
 					</mat-form-field>
-					<ng-container *ngIf="show">
+					<ng-container *ngIf="showOtherGender">
 						<mat-form-field appearance="outline">
 							<input matInput maxlength="GENDER_MAX_LENGTH" required
 								formControlName="otherGenderSelfDetermination"
