tg-5117 [FE] Se agrega la lógica para que solo el rol ESPECIALISTA_EN_ODONTOLOGIA pueda restablecer el odontograma y realizar una consulta odontológica.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontogram/odontogram.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontogram/odontogram.component.html
@@ -1,7 +1,8 @@
 <div style="margin: 40px;" fxLayout="column" fxLayoutGap="15px">
 
 
-	<div id="actions" fxLayout="row" fxLayoutGap="15px" fxLayoutAlign="end">
+	<div id="actions" *appHasRole="['ESPECIALISTA_EN_ODONTOLOGIA']" fxLayout="row" fxLayoutGap="15px"
+		fxLayoutAlign="end">
 		<button mat-stroked-button color="primary" class="uppercase" (click)="clearOdontogram()">Restablecer</button>
 		<button mat-raised-button color="primary" class="uppercase" (click)="openConsultationPopup()">Completar
 			consulta</button>
