--- a/front-end/apps/projects/hospital/src/styles.scss
+++ b/front-end/apps/projects/hospital/src/styles.scss
@@ -1,5 +1,5 @@
-@import './assets/styles/theme';
-@import './assets/styles/variables.scss';
+@import "./assets/styles/theme";
+@import "./assets/styles/variables.scss";
 
 html,
 body {
